2010-08-29  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-list-message.c: Highlight the line containing error when
	selecting the error message from message pane. Fixes bug LP: #519834.
	* src/bridge.c: Clear all highlighting when assembling program.

2010-08-25  Onkar Shinde  <onkarshinde@gmail.com>

	* README, TODO, doc/asm-guide.txt, doc/gnusim8085.1: Update website URL.
	* src/gui-editor.[c,h]: Add function to toggle display of line numbers.
	Add function to toggle mark at certain line. Add function to allow
	marks to be toggled by clicking left margin.
	* src/callbacks.c: Use new function to not display line numbers in
	tutorial window. Add callback function to detect button click on margin
	and toggle mark accordingly. Fixes LP: #519836.
	* src/gui-app.h: Use new function to allow mark to be toggled by
	clicking on left margin only in case of editor component.

2010-08-22  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Allow specifying mingw home directory via command
	line arguments when creating installer. Split translations in separate
	component so that users can choose not to install them. Add
	asm-guide.txt file to the list of files to be installed. Add iconv.dll
	file as well to make the application work with default install of
	latest GTK+ runtime.
	* src/support.[c,h]: Add function to load tutorial from asm-guide.txt.
	* src/interface.[c,h]: Add function to create interface to display
	tutorial.
	* src/callbacks.[c,h]: Add function to display tutorial text. Modify
	callback functions to show the tutorial instead of just pointing to it.
	Fixes LP: #579317.
	* po/gnusim8085.pot, po/*.po: Updated as per latest UI changes.

2010-08-17  Onkar Shinde  <onkarshinde@gmail.com>

	* src/*.c, src/*.h, src/Makefile.am: Add editable I/O listing as a tab.
	This is based on Debajit's work for memory editing. Hence copyright of
	new files stays with him. Fixes LP: #579324.

2010-06-22  Onkar Shinde  <onkarshinde@gmail.com>
